Applied Spotless on classes